--- a/tex/refs.bib
+++ b/tex/refs.bib
@@ -457,3 +457,199 @@
                 random forest},
   pages      = {125--129}
 }
+
+@article{pongsiri_examining_2007,
+  title      = {Examining the {Links} between {Biodiversity} and {Human} {Health}:
+                {An} {Interdisciplinary} {Research} {Initiative} at the {U}.{S}.
+                {Environmental} {Protection} {Agency}},
+  volume     = {4},
+  issn       = {1612-9202},
+  shorttitle = {Examining the {Links} between {Biodiversity} and {Human}
+                {Health}},
+  url        = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7087626/},
+  doi        = {10.1007/s10393-007-0087-3},
+  number     = {1},
+  journal    = {Ecohealth},
+  author     = {Pongsiri, Montira J. and Roman, Joe},
+  year       = {2007},
+  pmid       = {null},
+  pmcid      = {PMC7087626},
+  pages      = {82--85}
+}
+
+
+@article{mann_surface_2014,
+  title    = {Surface micropattern limits bacterial contamination},
+  volume   = {3},
+  issn     = {2047-2994},
+  doi      = {10.1186/2047-2994-3-28},
+  language = {eng},
+  journal  = {Antimicrobial Resistance and Infection Control},
+  author   = {Mann,
+              Ethan E. and Manna, Dipankar and Mettetal, Michael R. and May, Rhea M. and
+              Dannemiller, Elisa M. and Chung, Kenneth K. and Brennan, Anthony B. and
+              Reddy, Shravanthi T.},
+  year     = {2014},
+  pmid     = {25232470},
+  pmcid    = {PMC4166016},
+  pages    = {28}
+}
+
+@article{cooper_engineered_2011,
+  title      = {Engineered antifouling microtopographies: kinetic analysis of the
+                attachment of zoospores of the green alga {Ulva} to silicone elastomers},
+  volume     = {27},
+  issn       = {0892-7014},
+  shorttitle = {Engineered antifouling
+                microtopographies},
+  url        = {https://doi.org/10.1080/08927014.2011.611305},
+  doi        = {10.1080/08927014.2011.611305},
+  number     = {8},
+  journal    = {Biofouling},
+  author     = {Cooper, Scott P. and Finlay, John A. and Cone, Gemma and Callow,
+                Maureen E. and Callow, James A. and Brennan, Anthony B.},
+  month      = sep,
+  year       = {2011},
+  pmid       = {21882899},
+  keywords   = {biofouling, antifouling, algae,
+                topography, roughness, kinetics,  Ulva },
+  pages      = {881--892}
+}
+
+@article{james_cross_2021,
+  title      = {A cross-species test of the function of cuticular traits in ants
+                ({Hymenoptera}: {Formicidae})},
+  shorttitle = {A cross-species test of the
+                function of cuticular traits in ants ({Hymenoptera}},
+  url        = {https://myrmecologicalnews.org/cms/index.php?option=com_content&view=category&id=1577&Itemid=439},
+  doi        = {10.25849/MYRMECOL.NEWS_031:031},
+  author     = {{James T. Buxton}
+                and {Kylie A. Robert} and {Alan T. Marshall} and {Travis L. Dutka} and
+                {Heloise Gibb}},
+  year       = {2021}
+}
+
+@article{zhang_visual_2018,
+  title      = {Visual interpretability for deep learning: a survey},
+  volume     = {19},
+  issn       = {2095-9230},
+  shorttitle = {Visual interpretability for
+                deep learning},
+  url        = {https://doi.org/10.1631/FITEE.1700808},
+  doi        = {10.1631/FITEE.1700808},
+  language   = {en},
+  number     = {1},
+  journal    = {Frontiers of Information Technology \& Electronic Engineering},
+  author     = {Zhang, Quan-shi and Zhu, Song-chun},
+  month      = jan,
+  year       = {2018},
+  pages      = {27--39}
+}
+
+@article{selvaraju_grad_2020,
+  title      = {Grad-{CAM}: {Visual} {Explanations} from {Deep} {Networks} via
+                {Gradient}-{Based} {Localization}},
+  volume     = {128},
+  issn       = {0920-5691,
+                1573-1405},
+  shorttitle = {Grad-{CAM}},
+  url        = {http://link.springer.com/10.1007/s11263-019-01228-7},
+  doi        = {10.1007/s11263-019-01228-7},
+  language   = {en},
+  number     = {2},
+  journal    = {International Journal of Computer Vision},
+  author     = {Selvaraju, Ramprasaath
+                R. and Cogswell, Michael and Das, Abhishek and Vedantam, Ramakrishna and
+                Parikh, Devi and Batra, Dhruv},
+  month      = feb,
+  year       = {2020},
+  pages      = {336--359}
+}
+
+@article{maaten_visualizing_2008,
+  title   = {Visualizing Data using t-SNE},
+  author  = {Laurens van der Maaten and Geoffrey E. Hinton},
+  journal = {Journal of Machine Learning Research},
+  year    = {2008},
+  volume  = {9},
+  pages   = {2579-2605}
+}
+
+@article{deng_mnist_2012,
+  title    = {The {MNIST} {Database} of {Handwritten} {Digit} {Images} for
+              {Machine} {Learning} {Research} [{Best} of the {Web}]},
+  volume   = {29},
+  issn     = {1558-0792},
+  doi      = {10.1109/MSP.2012.2211477},
+  number   = {6},
+  journal  = {IEEE Signal Processing Magazine},
+  author   = {Deng, Li},
+  month    = nov,
+  year     = {2012},
+  keywords = {Machine learning},
+  pages    = {141--142}
+}
+
+@book{duda_pattern_2001,
+  address   = {New York},
+  edition   = {2nd ed},
+  title     = {Pattern classification},
+  isbn      = {9780471056690},
+  publisher = {Wiley},
+  author    = {Duda, Richard O. and Hart, Peter E. and Stork, David G.},
+  year      = {2001},
+  keywords  = {Pattern recognition systems, Statistical decision}
+}
+
+@article{arel_deep_2010,
+  title    = {Deep {Machine} {Learning} - {A} {New} {Frontier} in {Artificial}
+              {Intelligence} {Research} [{Research} {Frontier}]},
+  volume   = {5},
+  issn     = {1556-6048},
+  doi      = {10.1109/MCI.2010.938364},
+  number   = {4},
+  journal  = {IEEE
+              Computational Intelligence Magazine},
+  author   = {Arel, Itamar and Rose, Derek
+              C. and Karnowski, Thomas P.},
+  month    = nov,
+  year     = {2010},
+  keywords = {Artificial neural networks, Machine learning, Training, Computer
+              architecture, Robustness, Computational modeling, Brain modeling},
+  pages    = {13--18}
+}
+
+@article{lecun_gradient_1998,
+  title    = {Gradient-based learning applied to document recognition},
+  volume   = {86},
+  issn     = {1558-2256},
+  doi      = {10.1109/5.726791},
+  number   = {11},
+  journal  = {Proceedings of the IEEE},
+  author   = {Lecun, Y. and Bottou, L. and Bengio, Y.
+              and Haffner, P.},
+  month    = nov,
+  year     = {1998},
+  keywords = {Neural networks,
+              Pattern recognition, Machine learning, Optical character recognition
+              software, Character recognition, Feature extraction, Multi-layer neural
+              network, Optical computing, Hidden Markov models, Principal component
+              analysis},
+  pages    = {2278--2324}
+}
+
+@inproceedings{cimpoi_describing_2014,
+  title     = {Describing {Textures} in the {Wild}},
+  doi       = {10.1109/CVPR.2014.461},
+  booktitle = {2014 {IEEE} {Conference} on {Computer}
+               {Vision} and {Pattern} {Recognition}},
+  author    = {Cimpoi, Mircea and Maji,
+               Subhransu and Kokkinos, Iasonas and Mohamed, Sammy and Vedaldi, Andrea},
+  month     = jun,
+  year      = {2014},
+  note      = {ISSN: 1063-6919},
+  keywords  = {Materials, Vectors, Visualization, Image color analysis, Object recognition,
+               Vocabulary, Internet, texture, recognition, attribute, material, Fisher
+               Vector, convolutional neural network},
+  pages     = {3606--3613}
+}
